# stocks-analytics-platform

./: .gitignore  README.md  pyproject.toml
stocks_dbt/: ingest.py  main.py  profiles.yml
stocks_dbt/models/marts/: fct_prices.sql
stocks_dbt/models/marts/reporting/: fct_bollinger_bands.sql  fct_correlations.sql  fct_moving_averages.sql  fct_rsi.sql  fct_volatility.sql
stocks_dbt/models/staging/: sources.yml  stg_stocks.sql
streamlit/: app.py  queries.py
