[project]
name = "stocks-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=6.0",
    "dbt-core>=1.11.7",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.0",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "streamlit>=1.55.0",
    "yfinance>=1.2.0",
]